5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2360/executions/1602_1015.log
== TEST (2019-03-31 22:01:27) 
-- CODE:
primeiro = int(input("digite o primeiro: "))
segundo = int(input("digite o segundo: "))
terceiro = int(input("digite o terceiro: "))
print(min(primeiro, segundo, terceiro))
print((primeiro + segundo + terceiro)-(min(primeiro, segundo, terceiro)+(max(primeiro, segundo, Terceiro)))
print(max(primeiro, segundo, terceiro))
-- ERROR:
File "XXXX", line 6
    print(max(primeiro, segundo, terceiro))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:03:42) 
-- CODE:
n1 = int(input("digite o primeiro: ")
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1 + n2 + n3)-(min(n1, n2, n3)+(max(n1, n2,n3)))
print(max(n1, n2, n3))
-- ERROR:
File "XXXX", line 2
    n2 = int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:04:28) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1 + n2 + n3)-(min(n1, n2, n3)+(max(n1, n2,n3)))
print(max(n1, n2, n3))
-- ERROR:
File "XXXX", line 6
    print(max(n1, n2, n3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:04:32) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1 + n2 + n3)-(min(n1, n2, n3)+(max(n1, n2,n3)))
print(max(n1, n2, n3))
-- ERROR:
File "XXXX", line 6
    print(max(n1, n2, n3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:04:34) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1 + n2 + n3)-(min(n1, n2, n3)+(max(n1, n2,n3)))
print(max(n1, n2, n3))
-- EXECUTION TIME:
0.205219
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 6
    print(max(n1, n2, n3))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:05:18) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1 + n2 + n3)-(min(n1, n2, n3)+(max(n1, n2,n3)))
print(max(n1, n2, n3))
-- ERROR:
File "XXXX", line 6
    print(max(n1, n2, n3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:06:23) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1 + n2 + n3)-(min(n1, n2, n3)+(max(n1, n2,n3)))
print(max(n1, n2, n3))
-- ERROR:
File "XXXX", line 6
    print(max(n1, n2, n3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:06:42) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1 + n2 + n3)-(min(n1, n2, n3)+(max(n1, n2,n3)))

-- ERROR:
File "XXXX", line 6
    
                                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:06:48) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1 + n2 + n3)-(min(n1, n2, n3)+(max(n1, n2,n3)))

-- ERROR:
File "XXXX", line 6
    
                                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:06:51) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1 + n2 + n3)-(min(n1, n2, n3)+(max(n1, n2,n3)))

-- EXECUTION TIME:
0.135897
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 6
    
                                                           ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:07:31) 
-- CODE:
n1 = int(input("digite o primeiro: "))
-- ERROR:
File "XXXX", line 6
    
                                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:08:06) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo"))
-- ERROR:
File "XXXX", line 6
    
                                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:08:13) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo"))
-- ERROR:
File "XXXX", line 6
    
                                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:09:38) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print(max())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(max())
TypeError: max expected 1 arguments, got 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:10:18) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print(max(n1, n2, n3))

-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:12:52) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print(n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))
print(max(n1, n2, n3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:14:11) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print(n1+n2+n3) - (min(n1, n2, n3) + (max(n1, n2, n3)))
print(max(n1, n2, n3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(n1+n2+n3) - (min(n1, n2, n3) + (max(n1, n2, n3)))
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:15:27) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))
print(max(n1, n2, n3))

-- ERROR:
File "XXXX", line 6
    print(max(n1, n2, n3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:15:38) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))
print(max(n1, n2, n3))

-- ERROR:
File "XXXX", line 6
    print(max(n1, n2, n3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:16:09) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))
print(max(n1, n2, n3))

-- ERROR:
File "XXXX", line 6
    print(max(n1, n2, n3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:16:09) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))
print(max(n1, n2, n3))

-- ERROR:
File "XXXX", line 6
    print(max(n1, n2, n3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:16:10) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))
print(max(n1, n2, n3))

-- ERROR:
File "XXXX", line 6
    print(max(n1, n2, n3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:16:24) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))


-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:16:52) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))
print(max(n1, n2, n3))

-- ERROR:
File "XXXX", line 6
    print(max(n1, n2, n3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:17:09) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))
print(max(n1,n2,n3))

-- ERROR:
File "XXXX", line 6
    print(max(n1,n2,n3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:17:09) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))
print(max(n1,n2,n3))

-- ERROR:
File "XXXX", line 6
    print(max(n1,n2,n3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:17:23) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))
print((max(n1,n2,n3))

-- ERROR:
File "XXXX", line 6
    print((max(n1,n2,n3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:17:53) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))

-- ERROR:
File "XXXX", line 6
    
                                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:18:18) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))
-- ERROR:
File "XXXX", line 6
    
                                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:19:34) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))
print(max(n1, n2, n3))
-- ERROR:
File "XXXX", line 6
    print(max(n1, n2, n3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:19:45) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))
print( max(n1, n2, n3))
-- ERROR:
File "XXXX", line 6
    print( max(n1, n2, n3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:20:29) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
-- ERROR:
File "XXXX", line 6
    print( max(n1, n2, n3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:21:13) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
-- OUTPUT:
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:22:31) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))
-- ERROR:
File "XXXX", line 6
    
                                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:22:45) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3) - (min(n1, n2, n3) + (max(n1, n2, n3)))
-- ERROR:
File "XXXX", line 6
    
                                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:22:58) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))
-- ERROR:
File "XXXX", line 6
    
                                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:24:28) 
-- CODE:
n1 = int(input("digite o primeiro: "))
n2 = int(input("digite o segundo: "))
n3 = int(input("digite o terceiro: "))
print(min(n1, n2, n3))
print((n1+n2+n3)-(min(n1, n2, n3)+(max(n1, n2, n3)))
print(max(n1, n2, n3))
-- ERROR:
File "XXXX", line 6
    print(max(n1, n2, n3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:27:48) 
-- CODE:
a = int(input("digite o primeiro: "))
b = int(input("digite o segundo: "))
c = int(input("digite o terceiro: "))
print(min(a, b, c))
print((a+b+c)-(min(a, b, c)+(max(a, b, c)))
print(max(a, b, c))
-- ERROR:
File "XXXX", line 6
    print(max(a, b, c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:29:44) 
-- CODE:
a = int(input("digite o primeiro: "))
b = int(input("digite o segundo: "))
c = int(input("digite o terceiro: "))
print(min(a, b, c))
-- OUTPUT:
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:31:07) 
-- CODE:
a = int(input("digite o primeiro: "))
b = int(input("digite o segundo: "))
c = int(input("digite o terceiro: "))
print(min(a, b, c))
print(12)-(min(a, b, c))+(max(a, b, c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(12)-(min(a, b, c))+(max(a, b, c))
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:31:33) 
-- CODE:
a = int(input("digite o primeiro: "))
b = int(input("digite o segundo: "))
c = int(input("digite o terceiro: "))
print(min(a, b, c))
print((12)-(min(a, b, c))+(max(a, b, c)))
-- OUTPUT:
-2
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:32:02) 
-- CODE:
a = int(input("digite o primeiro: "))
b = int(input("digite o segundo: "))
c = int(input("digite o terceiro: "))
print(min(a, b, c))
print((a+b+c)-(min(a, b, c))+(max(a, b, c)))
-- OUTPUT:
-2
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:33:37) 
-- CODE:
a = int(input("digite o primeiro: "))
b = int(input("digite o segundo: "))
c = int(input("digite o terceiro: "))
print(min(a, b, c))
print((min(a, b, c))+(max(a, b, c)-(a+b+c)))
-- OUTPUT:
-2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:36:37) 
-- CODE:
a = int(input("digite o primeiro: "))
b = int(input("digite o segundo: "))
c = int(input("digite o terceiro: "))
print(min(a, b, c))
print((a+b+c)-(min(a, b, c)-(max(a, b, c)))
-- ERROR:
File "XXXX", line 6
    
                                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:37:35) 
-- CODE:
a = int(input("digite o primeiro: "))
b = int(input("digite o segundo: "))
c = int(input("digite o terceiro: "))
print(min(a, b, c))
print((a+b+c)-(min(a, b, c)-max(a, b, c)))
-- OUTPUT:
-2
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:38:01) 
-- CODE:
a = int(input("digite o primeiro: "))
b = int(input("digite o segundo: "))
c = int(input("digite o terceiro: "))
print(min(a, b, c))
print((a+b+c)-(min(a, b, c)+max(a, b, c)))
-- OUTPUT:
-2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:38:33) 
-- CODE:
a = int(input("digite o primeiro: "))
b = int(input("digite o segundo: "))
c = int(input("digite o terceiro: "))
print(min(a, b, c))
print((a+b+c)-(min(a, b, c)+max(a, b, c)))
print(max(a, b, c))
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:38:59) 
-- CODE:
a = int(input("digite o primeiro: "))
b = int(input("digite o segundo: "))
c = int(input("digite o terceiro: "))
print(min(a, b, c))
print((a+b+c)-(min(a, b, c)+max(a, b, c)))
print(max(a, b, c))
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:39:38) 
-- CODE:
a = int(input("digite o primeiro: "))
b = int(input("digite o segundo: "))
c = int(input("digite o terceiro: "))
print(min(a, b, c))
print((a+b+c)-(min(a, b, c)+max(a, b, c)))
print(max(a, b, c))
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:39:53) 
-- CODE:
a = int(input("digite o primeiro: "))
b = int(input("digite o segundo: "))
c = int(input("digite o terceiro: "))
print(min(a, b, c))
print((a+b+c)-(min(a, b, c)+max(a, b, c)))
print(max(a, b, c))
-- EXECUTION TIME:
0.151172
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
